Fixed alignment issues on footer for about.HTML

--- a/about.css
+++ b/about.css
@@ -139,6 +139,7 @@ ul {
 }
 
 footer {
+  position: static;
   width: 755px;
   height: 200px;
   margin-left: 30px;
